{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 48,
  "lineage": "f6432186-9112-8bdd-0252-b2fd73098315",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "location": "westeurope",
            "name": "LoadBalancer",
            "resource_group_name": "nordcloud_assignment",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/loadBalancingRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB2"
              }
            ],
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2",
            "location": "northeurope",
            "name": "LoadBalancer2",
            "resource_group_name": "nordcloud_assignment2",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.lbpip2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Compute/virtualMachineScaleSets/notejamvmss/virtualMachines/0/networkInterfaces/nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "nordcloud_assignment"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Compute/virtualMachineScaleSets/notejamvmss2/virtualMachines/1/networkInterfaces/nic2/ipConfigurations/internal"
            ],
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2",
            "name": "BackEndAddressPool",
            "resource_group_name": "nordcloud_assignment2"
          },
          "dependencies": [
            "azurerm_lb.lb2",
            "azurerm_public_ip.lbpip2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/http-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "nordcloud_assignment"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/probes/http-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "nordcloud_assignment2"
          },
          "dependencies": [
            "azurerm_lb.lb2",
            "azurerm_public_ip.lbpip2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer",
            "name": "http",
            "probe_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/loadBalancers/LoadBalancer/probes/http-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "nordcloud_assignment"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.bpepool",
            "azurerm_lb_probe.vmss",
            "azurerm_public_ip.lbpip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2",
            "name": "http",
            "probe_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/loadBalancers/LoadBalancer2/probes/http-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "nordcloud_assignment2"
          },
          "dependencies": [
            "azurerm_lb.lb2",
            "azurerm_lb_backend_address_pool.bpepool2",
            "azurerm_lb_probe.vmss2",
            "azurerm_public_ip.lbpip2",
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkInterfaces/nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/publicIPAddresses/vmpip",
                "subnet_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-25-92-4E",
            "name": "nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "nordcloud_assignment"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkInterfaces/nic2",
            "internal_domain_name_suffix": "kam3pfj31jfuvgsybd3zme4d4e.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/publicIPAddresses/vmpip2",
                "subnet_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal"
              }
            ],
            "location": "northeurope",
            "name": "nic2",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "nordcloud_assignment2"
          },
          "dependencies": [
            "azurerm_public_ip.pip2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.snet2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nicnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkInterfaces/nic|/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "network_interface_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkInterfaces/nic",
            "network_security_group_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkSecurityGroups/nsg1"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nicnsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkInterfaces/nic2|/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "network_interface_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkInterfaces/nic2",
            "network_security_group_id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkSecurityGroups/nsg2"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.nsg2",
            "azurerm_public_ip.pip2",
            "azurerm_resource_group.rg2",
            "azurerm_subnet.snet2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "westeurope",
            "name": "nsg1",
            "resource_group_name": "nordcloud_assignment",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "northeurope",
            "name": "nsg2",
            "resource_group_name": "nordcloud_assignment2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "notejamwe",
            "fqdn": "notejamwe.westeurope.cloudapp.azure.com",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.136.237",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIPForLB",
            "resource_group_name": "nordcloud_assignment",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbpip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "notejamne",
            "fqdn": "notejamne.northeurope.cloudapp.azure.com",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.138.203.86",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "PublicIPForLB2",
            "resource_group_name": "nordcloud_assignment2",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/publicIPAddresses/vmpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.116.197.225",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmpip",
            "resource_group_name": "nordcloud_assignment",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/publicIPAddresses/vmpip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.138.202.178",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vmpip2",
            "resource_group_name": "nordcloud_assignment2",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal",
            "name": "internal",
            "resource_group_name": "nordcloud_assignment",
            "virtual_network_name": "vmnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal",
            "name": "internal",
            "resource_group_name": "nordcloud_assignment2",
            "virtual_network_name": "vmnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.rg2",
            "azurerm_virtual_network.vnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "cdeb004e-280c-4900-bf93-0117409df2d8",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/virtualNetworks/vmnetwork",
            "location": "westeurope",
            "name": "vmnetwork",
            "resource_group_name": "nordcloud_assignment",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal",
                "name": "internal"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "95d71950-da3d-4a4b-9a58-08fb9613c3f4",
            "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/virtualNetworks/vmnetwork",
            "location": "northeurope",
            "name": "vmnetwork",
            "resource_group_name": "nordcloud_assignment2",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9959be41-5330-415e-8fb0-4709f25ccaec/resourceGroups/nordcloud_assignment2/providers/Microsoft.Network/virtualNetworks/vmnetwork/subnets/internal",
                "name": "internal"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg2"
          ]
        }
      ]
    }
  ]
}